fixed a small cmnt error. [TODO: add print option]

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             $.localStorage('degreeStart', degreeStart);
             $.localStorage('degreeEnd', degreeEnd);
 
-            check if template selected
+            // check if template selected
             if (template_url == 'null')
                 alert('Select a Template');
             else
