added footer [TODO: add print functionality]

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -363,10 +364,19 @@
         <div class="clear"></div>
     </div>
 
-<div class="footer">
-   <h4>Made by <br> <b>Anum Amir</b> </h4>
-   <h5>anamamer0@gmail.com</h5>
-</div>
+    <footer>
+        <div class="container">
+          <b>Project Status:<span class="project-state"> Under development [add print functionality]</span></b>
+          <br>
+          <b> get in touch</b>
+          <br>
+          <a href="mailto:anamamer0@gmail.com" class="my-email">Anum Amir(anamamer0@gmail.com)</a>
+          <br>
+          <a href="https://github.com/Anum1212/awesome-spices-restaurant" class="my-project-code">Source Code</a>
+          <br>
+          <a href="http://aua.net.pk" class="my-other-projects">Other Projects</a>
+        </div>
+      </footer>
 
     <!--  ---------------------------------------------------------------------------- -->
     <!-- Script -->
