--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <div class="col-sm-6 nopadding">
                     <div class="form-group">
                         <div class="input-group">
-                            <input type="number" class="form-control inputFilterer" id="skillLvl" name="skillLvl[]" value=""
-                                placeholder="Level" required>
+                            <input type="number" class="form-control inputFilterer" id="skillLvl" name="skillLvl[]"
+                                value="" placeholder="Level" required>
                             <div class="input-group-btn">
                                 <button class="btn btn-success" type="button" onclick="skill_fields();"> <span class="glyphicon glyphicon-plus"
                                         aria-hidden="true"></span> </button>
@@ -366,17 +366,15 @@
 
     <footer>
         <div class="container">
-          <b>Project Status:<span class="project-state"> Under development [add print functionality]</span></b>
-          <br>
-          <b> get in touch</b>
-          <br>
-          <a href="mailto:anamamer0@gmail.com" class="my-email">Anum Amir(anamamer0@gmail.com)</a>
-          <br>
-          <a href="https://github.com/Anum1212/cv-builder" class="my-project-code">Source Code</a>
-          <br>
-          <a href="http://aua.net.pk" class="my-other-projects">Other Projects</a>
+            <b> get in touch</b>
+            <br>
+            <a href="mailto:anamamer0@gmail.com" class="my-email">Anum Amir(anamamer0@gmail.com)</a>
+            <br>
+            <a href="https://github.com/Anum1212/cv-builder" class="my-project-code">Source Code</a>
+            <br>
+            <a href="http://aua.net.pk" class="my-other-projects">Other Projects</a>
         </div>
-      </footer>
+    </footer>
 
     <!--  ---------------------------------------------------------------------------- -->
     <!-- Script -->
@@ -557,7 +555,7 @@
         function remove_education_fields(rid) {
             $(".removeEducationClass" + rid).remove();
         }
-        
+
 
 
         // ----------------------------------------------------------------------------
