--- a/template-3.html
+++ b/template-3.html
@@ -83,9 +83,9 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <div id="user-education" class="card card-block">
+          <div class="card card-block">
             <h5><i class="fa fa-graduation-cap fa-fw"></i>Education</h5>
-            <ul class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
+            <ul id="user-education" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
           </div>
         </div>
       </div>
@@ -117,12 +117,15 @@
     // print script
     $("#printCVBtn").click(function () {
 
+      var cvWidth = $("#cv").outerWidth(true);
       var cvHeight = $("#cv").outerHeight(true);
 
       const filename = 'cv.pdf';
 
       html2canvas(document.querySelector('#cv'), {
-        height: cvHeight + 300
+        x: 120,
+        width: cvWidth - 260,
+        height: cvHeight + 200
       }).then(canvas => {
         let pdf = new jsPDF('p', 'mm', 'a4');
         pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
