--- a/template-7.html
+++ b/template-7.html
@@ -119,7 +119,9 @@
       const filename = 'cv.pdf';
 
       html2canvas(document.querySelector('#cv'), {
-        height: cvHeight + 300
+        x: 199,
+        width: 1080,
+        height: cvHeight
       }).then(canvas => {
         let pdf = new jsPDF('p', 'mm', 'a4');
         pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
